# tts-webui.MegaTTS3

./: .gitignore  Dockerfile  pyproject.toml  readme.md  requirements.txt
megatts3/: __init__.py  cli.py  download.py  frontend_function.py  gradio_api.py  infer_cli.py
megatts3/modules/ar_dur/: ar_dur_predictor.py
megatts3/modules/ar_dur/commons/: rel_transformer.py  rot_transformer.py  transformer.py
megatts3/modules/llm_dit/: dit.py
megatts3/modules/wavvae/decoder/: seanet_encoder.py  wavvae_v3.py
megatts3/utils/commons/: ckpt_utils.py
tts/: gradio_api.py
