[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tts-webui.megatts3"
version = "0.1.0"
description = "MegaTTS 3 - Zero-shot speech synthesis components as a Python library"
readme = "readme.md"
requires-python = ">=3.10,<4"
authors = [{ name = "ByteDance (upstream) / community packaging" }]
license = { file = "LICENSE" }
keywords = ["tts", "speech-synthesis", "diffusion", "whisper", "pytorch"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]

# Core install requirements (library usage)
dependencies = [
  "torch>=2.1,<3",
  "numpy>=1.23,<2",
  "librosa>=0.10",
  "transformers>=4.41,<5",
  "einops>=0.6",
  "scipy>=1.10",
  "pydub>=0.25,<1",
  "pyloudnorm>=0.1,<1",
  "WeTextProcessing>=1.0.4,<2",
  "langdetect>=1.0.9",
  "six>=1.16",
  "PyYAML>=6.0",
  "tqdm>=4.66",
]

[project.optional-dependencies]
ui = ["gradio>=5,<6"]
align = ["openai-whisper==20240930"]
plot = ["matplotlib>=3.7"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["tts*"]
